k8s/apps/homeassistant/templates/homeassistant-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-tailscale
  namespace: homeassistant
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
  tls:
    - hosts:
        - homeassistant
